# pedestrian_autoware_bridge

./: CMakeLists.txt  README.md  package.xml
launch/: bridge.launch
src/: node.cpp
